<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_20dp">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15dp">

            <TextView
                android:id="@+id/test_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_name"
                android:fontFamily="@font/custom_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>



            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/edit_svgrepo_com"/>

                <TextView
                    android:id="@+id/edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Edit"
                    android:fontFamily="@font/custom_font"
                    android:textColor="@color/black"/>


            </LinearLayout>



            <TextView
                android:id="@+id/test_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/test_name"
                app:layout_constraintStart_toStartOf="@+id/test_name"
                android:text="@string/test_value"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:fontFamily="@font/custom_font"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:fontFamily="@font/custom_font"
                android:layout_marginTop="@dimen/dimen_10dp"
                app:layout_constraintTop_toBottomOf="@+id/test_value"
                app:layout_constraintStart_toStartOf="@+id/test_value"/>

            <TextView
                android:id="@+id/sample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/test_value"
                android:text="@string/sample"
                android:fontFamily="@font/custom_font"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:paddingLeft="@dimen/dimen_10dp"
                app:layout_constraintStart_toEndOf="@+id/code"/>




            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/test_value"
                android:text="@string/price"
                android:fontFamily="@font/custom_font"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:paddingLeft="@dimen/dimen_10dp"
                app:layout_constraintStart_toEndOf="@+id/sample"
                />


            <TextView
                android:id="@+id/code_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/code"
                app:layout_constraintStart_toStartOf="@+id/code"
                android:text="@string/code_value"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:fontFamily="@font/custom_font"
                android:textColor="@color/black"
                android:textStyle="bold"/>




            <TextView
                android:id="@+id/sample_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sample"
                app:layout_constraintStart_toStartOf="@+id/sample"
                android:text="@string/sample_type"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/custom_font"
                android:textStyle="bold"/>




            <TextView
                android:id="@+id/price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/price"
                app:layout_constraintStart_toStartOf="@+id/price"
                android:text="@string/price_value"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:textColor="@color/black"
                android:fontFamily="@font/custom_font"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:textStyle="bold"/>










        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>