<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20dp"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_20dp">


                <TextView
                    android:id="@+id/person_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/person_name"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/op_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/op_number"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/time"
                    app:layout_constraintEnd_toEndOf="parent" />



                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/male"
                    android:textColor="@color/text_color"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@id/person_name"
                    app:layout_constraintTop_toBottomOf="@+id/person_name" />


                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/age"
                    android:textColor="@color/text_color"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/gender"
                    app:layout_constraintTop_toBottomOf="@+id/person_name" />


                <TextView
                    android:id="@+id/mobile_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/mobile_num"
                    android:textColor="@color/text_color"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/age"
                    app:layout_constraintTop_toBottomOf="@+id/person_name" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/date"
                    android:textColor="@color/text_color"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gender" />


                <TextView
                    android:id="@+id/schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/doj"
                    android:textColor="@color/text_color"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@id/date"
                    app:layout_constraintTop_toBottomOf="@+id/gender" />


                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/time_slot"
                    android:textColor="@color/text_color"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@id/schedule"
                    app:layout_constraintTop_toBottomOf="@+id/gender" />


                <TextView
                    android:id="@+id/landmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/landmark"
                    android:textColor="@color/text_color"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date" />


                <TextView
                    android:id="@+id/d_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/Dno"
                    android:textColor="@color/text_color"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/landmark"
                    app:layout_constraintTop_toBottomOf="@+id/date" />


                <TextView
                    android:id="@+id/state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/state"
                    android:textColor="@color/text_color"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/d_no"
                    app:layout_constraintTop_toBottomOf="@+id/date" />

                <TextView
                    android:id="@+id/pincode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/pincode"
                    android:textColor="@color/text_color"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/state"
                    app:layout_constraintTop_toBottomOf="@+id/date" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>