<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">
    
    
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_60dp"
        android:textSize="@dimen/dimen_30dp" />


    <TextView
        android:id="@+id/person_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kumar_Ramajan"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_30dp" />


    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/person_details"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/Admission_Date"
        android:paddingBottom="@dimen/dimen_60dp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:textSize="@dimen/dimen_30dp"/>






    <TextView
        android:id="@+id/lab_tests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        android:text="@string/Test_Status"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/name"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_30dp"
        android:textStyle="bold"
        android:layout_marginStart="330dp"
        android:layout_marginTop="@dimen/dimen_70dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>