<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_20dp">


            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:layout_marginTop="@dimen/_5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/user_profile_svgrepo_com"/>



            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:textStyle="bold"
                android:text="@string/people_clnic"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textview"
                app:layout_constraintStart_toStartOf="@id/textview"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:text="@string/place"/>


            <TextView
                android:id="@+id/update_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/textview"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAllCaps="true"
                android:textColor="@color/yellow"
                android:textSize="10sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="@dimen/_30dp"
                android:layout_marginTop="@dimen/_15dp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/mobile_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/image"
                app:layout_constraintStart_toStartOf="@+id/image"
                android:layout_marginTop="@dimen/_15dp"
                android:text="@string/mobile_text"
                android:textSize="10sp"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="normal"
                android:textColor="@color/light_text"/>


            <TextView
                android:id="@+id/mobile_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/mobile_txt"
                app:layout_constraintStart_toStartOf="@+id/mobile_txt"
                android:layout_marginTop="@dimen/_10dp"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:text="@string/mobile_num"/>


            <TextView
                android:id="@+id/hou_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/mobile_txt"
                app:layout_constraintTop_toBottomOf="@+id/image"
                android:text="@string/hou"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/light_text"
                android:textSize="10sp"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginStart="@dimen/_20dp"/>


            <TextView
                android:id="@+id/hou_network_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:fontFamily="@font/poppins_regular"
                android:textSize="10sp"
                android:textColor="@color/green"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintStart_toStartOf="@+id/hou_network"
                app:layout_constraintTop_toBottomOf="@id/hou_network"/>


            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/hou_network"
                app:layout_constraintTop_toBottomOf="@+id/image"
                android:text="@string/address"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/light_text"
                android:textSize="10sp"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginStart="@dimen/_20dp"/>


            <TextView
                android:id="@+id/text_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/address"
                app:layout_constraintStart_toStartOf="@+id/address"
                android:text="@string/address_text"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5dp"
                android:textSize="7sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>


        </androidx.constraintlayout.widget.ConstraintLayout>















    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>