<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/feedback_header">



    <ImageView
        android:id="@+id/header_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/user_profile_svgrepo_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/header_img"
        android:textColor="@color/white"
        android:textSize="@dimen/_6ssp"
        android:text="@string/healthonus"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:textStyle="normal"
        android:fontFamily="@font/poppins_regular"/>


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/shiva"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_6ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/clinic_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/admin"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:textColor="@color/foe_color"
        android:textStyle="normal"
        android:textSize="@dimen/_7ssp"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/logout"
        android:textColor="@color/foe"
        android:textSize="@dimen/_7ssp"
        app:layout_constraintStart_toEndOf="@+id/clinic_admin"
        app:layout_constraintTop_toBottomOf="@+id/name"/>




    <Space
        android:id="@+id/logo_space_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/header_img" />

</androidx.constraintlayout.widget.ConstraintLayout>